--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
 ---
 layout: home
 ---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/ockham.css">
+  <script async src="assets/js/ockham.js"></script>
+  <title>Home | willwam845</title>
+</head>
+<body>
+  <!-- Sidebar toggle checkbox -->
+  <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+  
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <!-- Sidebar content goes here -->
+    <!-- You can add your sidebar items here -->
+  </div>
+
+  <!-- Sidebar toggle button (hamburger menu) -->
+  <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+  <!-- Page content -->
+  <div class="wrap">
+    <div class="container">
+      <!-- Your page content goes here -->
+      <!-- This could include your header, main content, footer, etc. -->
+    </div>
+  </div>
+</body>
+</html>
