--- a/index.html
+++ b/index.html
@@ -16,8 +16,42 @@ layout: home
   
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
-    <!-- Sidebar content goes here -->
-    <!-- You can add your sidebar items here -->
+    <div class="sidebar-item">
+      <img src="assets/img/melon.png" class="pfp">
+    </div>
+
+    <nav class="sidebar-nav">
+      <ul class="sidebar-nav-list">
+        <li>
+          <a href="index.html" class="sidebar-nav-item active">home</a>
+        </li>
+        <li>
+          <a href="about/index.html" class="sidebar-nav-item">about</a>
+        </li>
+        <li>
+          <a href="projects/index.html" class="sidebar-nav-item">projects</a>
+        </li>
+        <li>
+          <a href="archive/index.html" class="sidebar-nav-item">archive</a>
+        </li>
+        <li>
+          <a href="tags/index.html" class="sidebar-nav-item">tags</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="sidebar-item">
+      <a class="social-icon" href="https://twitter.com/willwam845" target="_blank">
+        <i class="fab fa-twitter" title="twitter"></i>
+      </a>
+      <a class="social-icon" href="https://github.com/willwam845" target="_blank">
+        <i class="fab fa-github" title="gitHub"></i>
+      </a>
+    </div>
+
+    <div class="sidebar-item">
+      <small>powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/zivong/ockham" target="_blank">Ockham</a></small>
+    </div>
   </div>
 
   <!-- Sidebar toggle button (hamburger menu) -->
