--- a/index.html
+++ b/index.html
@@ -1,3 +1,101 @@
----
-layout: home
----
+<!DOCTYPE html>
+<html lang="en">
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
+  <link rel="mask-icon" href="../assets/img/favicon.ico">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/ockham.css">
+  <script async src="../assets/js/ockham.js"></script>
+  <script async src="../../use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+      }
+    });
+  </script>
+  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
+<title> about | abhilash </title>
+</head>
+  <body>
+    <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+<div class="sidebar" id="sidebar">
+  <div class="sidebar-item">
+    <img src="../assets/img/melon.png" class="pfp">
+  </div>
+  <nav class="sidebar-nav">
+    <ul class="sidebar-nav-list">
+      <li">
+        <a href="../index.html" class="sidebar-nav-item ">
+          home
+        </a>
+      </li>
+      <li">
+        <a href="index.html" class="sidebar-nav-item active">
+          about
+        </a>
+      </li>
+      <li">
+        <a href="../projects/index.html" class="sidebar-nav-item ">
+          projects
+        </a>
+      </li>
+      <li">
+        <a href="../archive/index.html" class="sidebar-nav-item ">
+          archive
+        </a>
+      </li>
+      <li">
+        <a href="../tags/index.html" class="sidebar-nav-item ">
+          tags
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div class="sidebar-item">
+      <a class="social-icon" href="https://twitter.com/willwam845" target="_blank">
+        <i class="fab fa-twitter" title="twitter"></i>
+      </a>
+      <a class="social-icon" href="https://github.com/willwam845" target="_blank">
+        <i class="fab fa-github" title="gitHub"></i>
+      </a>
+  </div>
+  <div class="sidebar-item">
+    <small>
+      powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/zivong/ockham" target="_blank">Ockham</a>
+    </small>
+  </div>
+</div>
+    <div class="wrap">
+      <div class="container">
+        <header class="masthead">
+          <div class="masthead-title">
+            <a href="../index.html" title="Home">willwam845</a>
+            <small></small>
+          </div>
+        </header>
+        <main>
+          <article class="page">
+  <h1 class="page-title">about</h1>
+  <p>hi, i’m willwam. i’m a high school student from the UK.</p>
+<p>i play ctfs for DiceGang, Crusaders of Rust and The WinRaRs, mainly doing cryptography challenges.</p>
+<p>in order to get better at explaining things, i made this site to publish ctf writeups of challenges i solved. feel free to take a look and point out my inevitable mistakes.</p>
+<p>you can also find me on <a href="https://twitter.com/willwam845">twitter</a> and <a href="https://github.com/willwam845">github</a></p>
+</article>
+        </main>
+        <footer class="footer">
+          <small>
+            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a> 
+          </small>
+        </footer>
+      </div>
+    </div>
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>    
+  </body>
+</html>
