--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <img src="../assets/img/melon.png" class="pfp">
+    <img src="../assets/img/bwostrich.png" class="pfp">
   </div>
   <nav class="sidebar-nav">
     <ul class="sidebar-nav-list">
