--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
   <nav class="sidebar-nav">
     <ul class="sidebar-nav-list">
       <li">
-        <a href="../index.html" class="sidebar-nav-item ">
+        <a href="../" class="sidebar-nav-item ">
           home
+        </a>
+      </li>
+      <li">
+        <a href="../posts" class="sidebar-nav-item ">
+          posts
         </a>
       </li>
       <li">
@@ -71,7 +76,7 @@
       <div class="container">
         <header class="masthead">
           <div class="masthead-title">
-            <a href="../index.html" title="Home">willwam845</a>
+            <a href="../" title="Home">willwam845</a>
             <small></small>
           </div>
         </header>
