--- a/posts.html
+++ b/posts.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.ico">
-  <link rel="mask-icon" href="assets/img/favicon.ico">
-  <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/ockham.css">
-  <script async src="assets/js/ockham.js"></script>
-  <script async src="../use.fontawesome.com/releases/v5.15.4/js/all.js"></script>  
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
+  <link rel="mask-icon" href="../assets/img/favicon.ico">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/ockham.css">
+  <script async src="../assets/js/ockham.js"></script>
+  <script async src="../../use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       tex2jax: {
@@ -20,59 +20,51 @@
       }
     });
   </script>
-  <script src="../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>   
-<title> home | willwam845 </title>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PPZXWFFSPB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-PPZXWFFSPB');
-</script>
+  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
+<title> about | abhilash </title>
 </head>
   <body>
     <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <img src="assets/img/melon.png" class="pfp">
-  </div>  
+    <img src="../assets/img/bwostrich.png" class="pfp">
+  </div>
   <nav class="sidebar-nav">
-    <ul class="sidebar-nav-list">    
+    <ul class="sidebar-nav-list">
       <li">
-        <a href="index.html" class="sidebar-nav-item active">
+        <a href="../" class="sidebar-nav-item ">
           home
         </a>
-      </li>    
+      </li>
       <li">
-        <a href="about/index.html" class="sidebar-nav-item ">
-          about
+        <a href="../posts" class="sidebar-nav-item ">
+          posts
         </a>
-      </li>    
+      </li>
       <li">
-        <a href="projects/index.html" class="sidebar-nav-item ">
+        <a href="../projects/index.html" class="sidebar-nav-item ">
           projects
         </a>
-      </li>    
+      </li>
       <li">
-        <a href="archive/index.html" class="sidebar-nav-item ">
+        <a href="../archive/index.html" class="sidebar-nav-item ">
           archive
         </a>
-      </li>    
+      </li>
       <li">
-        <a href="tags/index.html" class="sidebar-nav-item ">
+        <a href="../tags/index.html" class="sidebar-nav-item ">
           tags
         </a>
-      </li>  
+      </li>
     </ul>
   </nav>
-  <div class="sidebar-item"> 
+  <div class="sidebar-item">
       <a class="social-icon" href="https://twitter.com/willwam845" target="_blank">
         <i class="fab fa-twitter" title="twitter"></i>
       </a>
       <a class="social-icon" href="https://github.com/willwam845" target="_blank">
         <i class="fab fa-github" title="gitHub"></i>
-      </a>  
+      </a>
   </div>
   <div class="sidebar-item">
     <small>
@@ -84,7 +76,7 @@
       <div class="container">
         <header class="masthead">
           <div class="masthead-title">
-            <a href="index.html" title="Home">willwam845</a>
+            <a href="../" title="Home">willwam845</a>
             <small></small>
           </div>
         </header>
@@ -180,6 +172,6 @@
         </footer>
       </div>
     </div>
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>    
   </body>
 </html>
