--- a/posts.html
+++ b/posts.html
@@ -76,7 +76,7 @@
       <div class="container">
         <header class="masthead">
           <div class="masthead-title">
-            <a href="../" title="Home">willwam845</a>
+            <a href="../" title="Home">abhilash</a>
             <small></small>
           </div>
         </header>
