--- a/posts.html
+++ b/posts.html
@@ -42,7 +42,7 @@
         </a>
       </li>
       <li">
-        <a href="../projects/index.html" class="sidebar-nav-item ">
+        <a href="../projects" class="sidebar-nav-item ">
           projects
         </a>
       </li>
