--- a/posts.html
+++ b/posts.html
@@ -37,7 +37,7 @@
         </a>
       </li>
       <li">
-        <a href="../posts" class="sidebar-nav-item ">
+        <a href="../posts/" class="sidebar-nav-item ">
           posts
         </a>
       </li>
