--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </a>
       </li>
       <li">
-        <a href="../posts" class="sidebar-nav-item ">
+        <a href="../posts/" class="sidebar-nav-item ">
           posts
         </a>
       </li>
       <li">
-        <a href="../projects/index.html" class="sidebar-nav-item ">
+        <a href="../projects" class="sidebar-nav-item ">
           projects
         </a>
       </li>
@@ -76,7 +76,7 @@
       <div class="container">
         <header class="masthead">
           <div class="masthead-title">
-            <a href="../" title="Home">willwam845</a>
+            <a href="../" title="Home">abhilash</a>
             <small></small>
           </div>
         </header>
