--- a/projects/index.html
+++ b/projects/index.html
@@ -37,12 +37,12 @@
         </a>
       </li>
       <li">
-        <a href="../posts" class="sidebar-nav-item ">
+        <a href="../posts/" class="sidebar-nav-item ">
           posts
         </a>
       </li>
       <li">
-        <a href="../projects/index.html" class="sidebar-nav-item ">
+        <a href="../projects" class="sidebar-nav-item ">
           projects
         </a>
       </li>
