--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         </a>
       </li>
       <li">
-        <a href="../archive/index.html" class="sidebar-nav-item ">
+        <a href="../archive" class="sidebar-nav-item ">
           archive
         </a>
       </li>
       <li">
-        <a href="../tags/index.html" class="sidebar-nav-item ">
+        <a href="../tags" class="sidebar-nav-item ">
           tags
         </a>
       </li>
