--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
     });
   </script>
-  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
+  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <title> about | abhilash </title>
 </head>
   <body>
@@ -83,19 +83,18 @@
         <main>
           <article class="page">
   <h1 class="page-title">about</h1>
-  <p>hi, i’m willwam. i’m a high school student from the UK.</p>
-<p>i play ctfs for DiceGang, Crusaders of Rust and The WinRaRs, mainly doing cryptography challenges.</p>
-<p>in order to get better at explaining things, i made this site to publish ctf writeups of challenges i solved. feel free to take a look and point out my inevitable mistakes.</p>
-<p>you can also find me on <a href="https://twitter.com/willwam845">twitter</a> and <a href="https://github.com/willwam845">github</a></p>
+  <p>hi, i'm abhilash. i'm a high school student from the US.</p>
+<p>i like programming. i know (a little bit of) java, javascript and python</p>
+<p>i made this site because i was bored out of my mind one saturday. you can also find me on <a href="https://discord.com/users/988257604721606656">discord</a> or <a href="https://github.com/ostrichization">github</a></p>
 </article>
         </main>
         <footer class="footer">
           <small>
-            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a> 
+            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a>
           </small>
         </footer>
       </div>
     </div>
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>    
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
   </body>
 </html>
