--- a/projects/index.html
+++ b/projects/index.html
@@ -20,8 +20,8 @@
       }
     });
   </script>
-  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
-<title> about | abhilash </title>
+  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<title> projects | abhilash </title>
 </head>
   <body>
     <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
@@ -85,27 +85,18 @@
   <h1 class="page-title">projects</h1>
   <p>here is a (probably incomplete) list of things that i have made</p>
 
-<h2 id="jtoh-tower-tracker"><a href="https://jtohtowertracker.herokuapp.com/">JToH Tower Tracker</a></h2>
+<h2 id="Hackintosh"><a href="https://github.com/Ostrichization/Hackinosh-Pavilion-15t-cs0">Hackintosh</a></h2>
 
-<p>a statistics page site for the Roblox game Juke’s Towers of Hell</p>
-
-<p>source code: maybe after i clean it up</p>
-
-<h2 id="ctf-challenges"><a href="https://github.com/willwam845/ctf/">CTF challenges</a></h2>
-
-<p>an archive of ctf challenges i have written for security capture the flags (ctfs)</p>
-
-</article>
-
+<p>i turned an old laptop into a Hackintosh and put the config on github with a small write-up on it</p>
         </main>
 
         <footer class="footer">
           <small>
-            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a> 
+            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a>
           </small>
         </footer>
       </div>
     </div>
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>    
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
   </body>
 </html>
