--- a/404.html
+++ b/404.html
@@ -1,25 +1,101 @@
 ---
 permalink: /404.html
-layout: default
 ---
-
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<!DOCTYPE html>
+<html lang="en">
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
+  <link rel="mask-icon" href="../assets/img/favicon.ico">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/ockham.css">
+  <script async src="../assets/js/ockham.js"></script>
+  <script async src="../../use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+      }
+    });
+  </script>
+  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<title> 404 | abhilash </title>
+</head>
+  <body>
+    <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+<div class="sidebar" id="sidebar">
+  <div class="sidebar-item">
+    <img src="../assets/img/bwostrich.png" class="pfp">
+  </div>
+  <nav class="sidebar-nav">
+    <ul class="sidebar-nav-list">
+      <li">
+        <a href="../" class="sidebar-nav-item ">
+          home
+        </a>
+      </li>
+      <li">
+        <a href="../posts/" class="sidebar-nav-item ">
+          posts
+        </a>
+      </li>
+      <li">
+        <a href="../projects" class="sidebar-nav-item ">
+          projects
+        </a>
+      </li>
+      <li">
+        <a href="../archive/index.html" class="sidebar-nav-item ">
+          archive
+        </a>
+      </li>
+      <li">
+        <a href="../tags/index.html" class="sidebar-nav-item ">
+          tags
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div class="sidebar-item">
+      <a class="social-icon" href="https://twitter.com/willwam845" target="_blank">
+        <i class="fab fa-twitter" title="twitter"></i>
+      </a>
+      <a class="social-icon" href="https://github.com/willwam845" target="_blank">
+        <i class="fab fa-github" title="gitHub"></i>
+      </a>
+  </div>
+  <div class="sidebar-item">
+    <small>
+      powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/zivong/ockham" target="_blank">Ockham</a>
+    </small>
+  </div>
 </div>
+    <div class="wrap">
+      <div class="container">
+        <header class="masthead">
+          <div class="masthead-title">
+            <a href="../" title="Home">abhilash</a>
+            <small></small>
+          </div>
+        </header>
+        <main>
+          <article class="page">
+  <h1 class="page-title">404, uh-oh</h1>
+  <p>you seem lost... let's take a step <a href="javascript:history.back()">back</a></p>
+
+</article>
+
+        </main>
+
+        <footer class="footer">
+          <small>
+            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a>
+          </small>
+        </footer>
+      </div>
+    </div>
