--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </ul>
   </nav>
   <div class="sidebar-item">
-      <a class="social-icon" href="https://twitter.com/willwam845" target="_blank">
+      <a class="social-icon" href="https://twitter.com/OstrichHimself" target="_blank">
         <i class="fab fa-twitter" title="twitter"></i>
       </a>
-      <a class="social-icon" href="https://github.com/willwam845" target="_blank">
+      <a class="social-icon" href="https://github.com/Ostrichization" target="_blank">
         <i class="fab fa-github" title="gitHub"></i>
       </a>
   </div>
