not even sure at this point

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +10,8 @@
   <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel="stylesheet" href="../assets/css/ockham.css">
   <script async src="../assets/js/ockham.js"></script>
-  <script async src="../../use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
-<script type="text/x-mathjax-config">
+  <script async src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+  <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       tex2jax: {
         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
@@ -20,66 +19,52 @@
       }
     });
   </script>
-  <script src="../../cdn.mathjax.org/mathjax/latest/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-<title> about | abhilash </title>
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
 </head>
-  <body>
-    <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
-<div class="sidebar" id="sidebar">
-  <div class="sidebar-item">
-    <img src="../assets/img/bwostrich.png" class="pfp">
-  </div>
-  <nav class="sidebar-nav">
-    <ul class="sidebar-nav-list">
-      <li">
-        <a href="../" class="sidebar-nav-item ">
-          home
-        </a>
-      </li>
-      <li">
-        <a href="../posts/" class="sidebar-nav-item ">
-          posts
-        </a>
-      </li>
-      <li">
-        <a href="../projects" class="sidebar-nav-item ">
-          projects
-        </a>
-      </li>
-      <li">
-        <a href="../archive/index.html" class="sidebar-nav-item ">
-          archive
-        </a>
-      </li>
-      <li">
-        <a href="../tags/index.html" class="sidebar-nav-item ">
-          tags
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <div class="sidebar-item">
+<body>
+  <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+  <div class="sidebar" id="sidebar">
+    <div class="sidebar-item">
+      <img src="../assets/img/bwostrich.png" class="pfp">
+    </div>
+    <nav class="sidebar-nav">
+      <ul class="sidebar-nav-list">
+        <li>
+          <a href="../" class="sidebar-nav-item">Home</a>
+        </li>
+        <li>
+          <a href="../posts" class="sidebar-nav-item">Posts</a>
+        </li>
+        <li>
+          <a href="../projects" class="sidebar-nav-item">Projects</a>
+        </li>
+        <li>
+          <a href="../archive/index.html" class="sidebar-nav-item">Archive</a>
+        </li>
+        <li>
+          <a href="../tags/index.html" class="sidebar-nav-item">Tags</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="sidebar-item">
       <a class="social-icon" href="https://twitter.com/OstrichHimself" target="_blank">
-        <i class="fab fa-twitter" title="twitter"></i>
+        <i class="fab fa-twitter" title="Twitter"></i>
       </a>
       <a class="social-icon" href="https://github.com/Ostrichization" target="_blank">
-        <i class="fab fa-github" title="gitHub"></i>
+        <i class="fab fa-github" title="GitHub"></i>
       </a>
+    </div>
+    <div class="sidebar-item">
+      <small>Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/zivong/ockham" target="_blank">Ockham</a></small>
+    </div>
   </div>
-  <div class="sidebar-item">
-    <small>
-      powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/zivong/ockham" target="_blank">Ockham</a>
-    </small>
-  </div>
-</div>
-    <div class="wrap">
-      <div class="container">
-        <header class="masthead">
-          <div class="masthead-title">
-            <a href="../" title="Home">abhilash</a>
-            <small></small>
-          </div>
-        </header>
+  <div class="wrap">
+    <div class="container">
+      <header class="masthead">
+        <div class="masthead-title">
+          <a href="../" title="Home">abhilash</a>
+        </div>
+      </header>
         <main>
           <article class="page">
   <h1 class="page-title">about</h1>
