--- a/404.html
+++ b/404.html
@@ -1,11 +1,9 @@
----
-permalink: /404.html
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="../assets/img/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon.ico">
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
@@ -70,14 +68,10 @@ permalink: /404.html
       </header>
         <main>
           <article class="page">
-  <h1 class="page-title">404, uh-oh</h1>
-  <p>you seem lost... let's take a step <a href="javascript:history.back()">back</a></p>
-
-</article>
-
-          
+            <h1 class="page-title">404, uh-oh</h1>
+            <p>you seem lost... let's take a step <a href="javascript:history.back()">back</a></p>
+          </article>
         </main>
-
         <footer class="footer">
           <small>
             made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a>
@@ -85,3 +79,5 @@ permalink: /404.html
         </footer>
       </div>
     </div>
+</body>
+</html>
