--- a/404.html
+++ b/404.html
@@ -1,9 +1,11 @@
+---
+permalink: /404.html
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="../assets/img/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon.ico">
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
@@ -21,23 +23,6 @@
     });
   </script>
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
-  <style>
-    .sidebar {
-      display: block; /* Ensure sidebar is displayed */
-    }
-    .sidebar-item {
-      display: block; /* Ensure sidebar items are displayed */
-    }
-    .sidebar-nav-list {
-      display: block; /* Ensure sidebar nav list is displayed */
-    }
-    .sidebar-nav-item {
-      display: inline-block; /* Ensure sidebar nav items are displayed inline */
-    }
-    .social-icon {
-      display: inline-block; /* Ensure social icons are displayed inline */
-    }
-  </style>
 </head>
 <body>
   <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
@@ -83,18 +68,20 @@
           <a href="../" title="Home">abhilash</a>
         </div>
       </header>
-      <main>
-        <article class="page">
-          <h1 class="page-title">404, uh-oh</h1>
-          <p>you seem lost... let's take a step <a href="javascript:history.back()">back</a></p>
-        </article>
-      </main>
-      <footer class="footer">
-        <small>
-          made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a>
-        </small>
-      </footer>
+        <main>
+          <article class="page">
+  <h1 class="page-title">404, uh-oh</h1>
+  <p>you seem lost... let's take a step <a href="javascript:history.back()">back</a></p>
+
+</article>
+
+          
+        </main>
+
+        <footer class="footer">
+          <small>
+            made with the <a href="https://github.com/zivong/ockham">ockham</a> theme and <a href="https://jekyllrb.com/">jekyll</a>
+          </small>
+        </footer>
+      </div>
     </div>
-  </div>
-</body>
-</html>
